# threat-intel-correlator

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  26.1.1  LICENSE  README.md  SECURITY.md  poetry.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
configs/: default.yaml  example.env  scoring_profile.v1.yaml
docs/: ARCHITECTURE.md  OPERATIONS.md  SECURE_CODING.md  THREAT_MODEL.md
docs/adr/: 0001-hexagonal-architecture.md  0002-python-choice.md  0003-ai-as-narrator-only.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ai-advisory-banner.tsx  dashboard-charts.tsx  diagnostics-panel.tsx  export-panel.tsx  findings-appendix.tsx  findings-detail-drawer.tsx  findings-table.tsx  input-guide.tsx  kpi-row.tsx  output-mode-pill.tsx  priority-queue.tsx  provider-status.tsx  recommendations-card.tsx  report-cover.tsx  report-header.tsx  report-summary.tsx  risk-breakdown.tsx  run-history.tsx  section-tabs.tsx  security-panel.tsx  sweep-form.tsx  sweep-status-strip.tsx  theme-toggle.tsx  top-nav.tsx
frontend/hooks/: use-clipboard.ts
frontend/lib/: api.ts  filters.ts  format.ts  history.ts  priority.ts  report.ts  samples.ts  severity.ts
src/tic/: __main__.py
tests/: conftest.py
tests/e2e/: test_sweep_e2e.py
tests/fixtures/: __init__.py  fake_secret_store.py  mock_ai_provider.py
tests/integration/: test_abuseipdb.py  test_ai_mock_e2e.py  test_api_provider_status.py  test_api_sweep_ai_enabled_mock.py  test_api_sweep_no_raw.py  test_audit_chain.py  test_cache.py  test_cli_ai_enabled_mock.py  test_correlation.py  test_file_log_source.py  test_misp_parser.py  test_misp_verify_tls.py  test_ndjson_parser.py  test_orchestrator.py  test_orchestrator_ai_cap.py  test_orchestrator_ai_invariants.py  test_parsers.py  test_providers_mocked.py  test_safe_client.py  test_stix_parser.py
tests/security/: test_ai_logging_redaction.py  test_csv_export_formula_injection.py  test_frontend_ai_rendering.py  test_frontend_ai_safety.py  test_path_traversal_corpus.py  test_prompt_injection_corpus.py  test_ssrf_corpus.py
(+100 files in other folders)
